Fix position of first element on mobile work section

--- a/styles.css
+++ b/styles.css
@@ -256,6 +256,7 @@ main p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-top: 150px;
 }
 
 .card-container {
